made changes to the table

--- a/table.html
+++ b/table.html
@@ -15,56 +15,68 @@
 </style>
           
 
-        <tr style="height:40px">
+        <tr style="height:40px;background-color: navajowhite; border: solid 2px;">
+            <th>No.</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email Address</th>
+            
         </tr>
         <tr>
+            <td>1</td>
             <td>Neema</td>
             <td>Ocholla</td>
             <td>ochollaneema@gmail.com</td>
         </tr>
         <tr>
+            <td>2</td>
             <td>Jane</td>
             <td>Doe</td>
             <td>janedoe@gmail.com</td>
         </tr>
         <tr>
+            <td>3</td>
             <td>Charles</td>
             <td>Darwin</td>
             <td>darwinchar@gmail.com</td>
         </tr>
         <tr>
+            <td>4</td>
             <td>Ada</td>
             <td>Lovelace</td>
             <td>lovelaceada@gmail.com</td>
         </tr>
         <tr>
+            <td>5</td>
             <td>Robert</td>
             <td>Downey</td>
             <td>robdowney@gmail.com</td>
         </tr>
         <tr>
+            <td>6</td>
             <td>Mary</td>
             <td>Poppins</td>
             <td>marypoppins@gmail.com</td>
         </tr>
         <tr>
+            <td>7</td>
             <td>Gamma</td>
             <td>Pinto</td>
             <td>pintogamma@gmail.com</td>
         </tr>
         <tr>
+            <td>8</td>
             <td>Lisa</td>
             <td>Manoban</td>
             <td>lisamanoban@gmail.com</td>
         </tr>
         <tr>
+            <td>9</td>
             <td>Linsey</td>
             <td>Williams</td>
             <td>willinsey@gmail.com</td>
         </tr>
+        <td>10</td>
         <td>Tom</td>
         <td>Coleman</td>
         <td>colemantom@gmail.com</td>
