changed the link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ form{
 </head>
 
 <body style="background-color: mistyrose;">
-    <form action="table.html" method="get" class="signup_form">
+    <form action="login.html" method="get" class="signup_form">
         <p>Already have an account?<a href="login.html"><b>Sign In</b></a></p>
         <h1>Sign Up</h1>
       <label for="name">Name:</label>
