--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ form{
 </head>
 
 <body style="background-color: mistyrose;">
-    <form action="login.html" method="get" class="signup_form">
+    <form action="table.html" method="get" class="signup_form">
         <p>Already have an account?<a href="login.html"><b>Sign In</b></a></p>
         <h1>Sign Up</h1>
       <label for="name">Name:</label>
@@ -119,7 +119,7 @@ form{
         <label for="Terms">I've Read and agreed With the <b>Terms of Services</b> And Our <b>Privacy Policy</b></label>
       <br>
       <br>
-      <button type="submit id="signup_button" ">Sign Up</a></button>
+      <button type="submit" id="signup_button">Sign Up</a></button>
 
         <br>
         <h2 class="hr-lines">Or Sign Up With</h2>
