--- a/login.html
+++ b/login.html
@@ -102,7 +102,7 @@
         <input type="checkbox"  checked="checked" id="Terms">
         <label for="Terms">I've Read and agreed With the <b>Terms of Services</b> And Our <b>Privacy Policy</b></label>
         <br>
-        <button type="submit id="signin_button" ">Sign In</a></button>
+        <button type="submit" id="signin_button" >Sign In</a></button>
 <br>
 <br>
         <h2 class="hr-lines">Or Sign In With</h2>
